Fixed spacing between city profile sections. #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,7 @@ figure {
   text-decoration: none;
   border: 1px solid #001d6e;
   min-width: 240px;
-  margin: 2% 10% 0;
+  margin: 5% 10% 0;
   border-radius: 0.375rem;
 }
 
